white space fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -89,7 +89,7 @@ body {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: var(--white-color);
+  color: var(--white);
 }
 
 #mainNav .navbar-brand {
